[gd_scene load_steps=6 format=3 uid="uid://1xmoke6cfmd3"]

[ext_resource type="Theme" uid="uid://d6a0n168pf4u" path="res://scenes/PackagePanel.tres" id="1_4w152"]
[ext_resource type="Script" path="res://scripts/PackagePanel.gd" id="1_m8ohc"]
[ext_resource type="FontFile" uid="uid://vd3784hx2cna" path="res://assets/fonts/ApercuMonoProMedium.ttf" id="3_3kl1k"]
[ext_resource type="Texture2D" uid="uid://ci0cn5ar2725g" path="res://assets/ui/chip-black 1.png" id="5_no85b"]
[ext_resource type="Texture2D" uid="uid://cf75f5jsyoqbb" path="res://assets/ui/PackageLabel.png" id="6_2rir0"]

[node name="PackagePanel" type="Panel"]
custom_minimum_size = Vector2(176, 316)
offset_right = 176.0
offset_bottom = 316.0
theme = ExtResource("1_4w152")
script = ExtResource("1_m8ohc")

[node name="PriceLabel" type="Label" parent="."]
custom_minimum_size = Vector2(120, 60)
layout_mode = 0
offset_left = 8.0
offset_top = 34.0
offset_right = 168.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChipsLabel" type="Label" parent="."]
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_left = 8.0
offset_top = 138.0
offset_right = 9.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GemsLabel" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(240, 180)
layout_mode = 0
offset_left = 320.0
offset_top = 60.0
offset_right = 560.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3kl1k")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="."]
custom_minimum_size = Vector2(160, 50)
layout_mode = 0
offset_left = 8.0
offset_top = 258.0
offset_right = 168.0
offset_bottom = 308.0
theme = ExtResource("1_4w152")
text = "BUY"

[node name="ChipIcon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.360784)
custom_minimum_size = Vector2(160, 120)
layout_mode = 0
offset_left = 8.0
offset_top = 130.0
offset_right = 168.0
offset_bottom = 250.0
texture = ExtResource("5_no85b")
expand_mode = 1
stretch_mode = 5

[node name="GemIcon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.4)
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_left = 380.0
offset_right = 500.0
offset_bottom = 120.0
expand_mode = 1
stretch_mode = 6

[node name="LabelUIElement" type="TextureRect" parent="."]
custom_minimum_size = Vector2(52, 26)
layout_mode = 0
offset_right = 52.0
offset_bottom = 26.0
texture = ExtResource("6_2rir0")
expand_mode = 1

[node name="PackageLabel" type="Label" parent="."]
custom_minimum_size = Vector2(52, 26)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 10
text = "Chips"
horizontal_alignment = 1
vertical_alignment = 1
